--- a/build.gradle
+++ b/build.gradle
@@ -48,6 +48,24 @@ dependencies {
 
 	// Redis
 	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+
+	// query dsl
+	implementation "com.querydsl:querydsl-core:5.0.0"
+	implementation "com.querydsl:querydsl-collections"
+	implementation("com.querydsl:querydsl-jpa:5.0.0:jakarta")
+	annotationProcessor "com.querydsl:querydsl-apt:5.0.0:jakarta"
+	annotationProcessor "jakarta.annotation:jakarta.annotation-api"
+	annotationProcessor "jakarta.persistence:jakarta.persistence-api:3.1.0"
+	testImplementation 'jakarta.persistence:jakarta.persistence-api'
+	testImplementation 'com.querydsl:querydsl-jpa:5.0.0'
+
+	sourceSets {
+		main {
+			java {
+				srcDirs = ["$projectDir/src/main/java", "$projectDir/build/generated"]
+			}
+		}
+	}
 }
 
 dependencyManagement {
@@ -58,4 +76,8 @@ dependencyManagement {
 
 tasks.named('test') {
 	useJUnitPlatform()
+}
+
+tasks.register('cleanQuerydsl') {
+	delete file('/build/generated')
 }
