--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,7 @@ build/
 !**/src/main/**/build/
 !**/src/test/**/build/
 application-secret.yml
-
+application-local.yml
 ### STS ###
 .apt_generated
 .classpath
