--- a/build.gradle
+++ b/build.gradle
@@ -58,6 +58,8 @@ dependencies {
 	annotationProcessor "jakarta.persistence:jakarta.persistence-api:3.1.0"
 	testImplementation 'jakarta.persistence:jakarta.persistence-api'
 	testImplementation 'com.querydsl:querydsl-jpa:5.0.0'
+	// feign clients
+	implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
 
 	sourceSets {
 		main {
