--- a/build.gradle
+++ b/build.gradle
@@ -50,14 +50,14 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
 
 	// query dsl
-	implementation "com.querydsl:querydsl-core:5.0.0"
-	implementation "com.querydsl:querydsl-collections"
-	implementation("com.querydsl:querydsl-jpa:5.0.0:jakarta")
-	annotationProcessor "com.querydsl:querydsl-apt:5.0.0:jakarta"
-	annotationProcessor "jakarta.annotation:jakarta.annotation-api"
-	annotationProcessor "jakarta.persistence:jakarta.persistence-api:3.1.0"
-	testImplementation 'jakarta.persistence:jakarta.persistence-api'
-	testImplementation 'com.querydsl:querydsl-jpa:5.0.0'
+//	implementation "com.querydsl:querydsl-core:5.0.0"
+//	implementation "com.querydsl:querydsl-collections"
+//	implementation("com.querydsl:querydsl-jpa:5.0.0:jakarta")
+//	annotationProcessor "com.querydsl:querydsl-apt:5.0.0:jakarta"
+//	annotationProcessor "jakarta.annotation:jakarta.annotation-api"
+//	annotationProcessor "jakarta.persistence:jakarta.persistence-api:3.1.0"
+//	testImplementation 'jakarta.persistence:jakarta.persistence-api'
+//	testImplementation 'com.querydsl:querydsl-jpa:5.0.0'
 	// feign clients
 	implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
 
