--- a/build.gradle
+++ b/build.gradle
@@ -68,6 +68,10 @@ dependencies {
 			}
 		}
 	}
+
+	//kafka
+	implementation 'org.springframework.kafka:spring-kafka'
+	testImplementation 'org.springframework.kafka:spring-kafka-test'
 }
 
 dependencyManagement {
